--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,3 +1,39 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+@layer utilities {
+    .dark-top-border{
+        border-top: 1px solid #27272a;
+        border-left: 1px solid #27272a;
+        border-bottom: 1px solid #a1a1aa;
+        border-right: 1px solid #a1a1aa;
+    }
+    .light-top-border{
+        border-top: 1px solid #a1a1aa;
+        border-left: 1px solid #a1a1aa;
+        border-bottom: 1px solid #27272a;
+        border-right: 1px solid #27272a;
+    }
+    .light-tab-border{
+        border-top: 1px solid #a1a1aa;
+        border-left: 1px solid #a1a1aa;
+        border-right: 2px solid black;
+        padding-right: 20px;
+        padding-left: 4px;
+        white-space: nowrap;
+        outline: 2px solid transparent;
+        outline-offset: 2px;
+        font-size: 1rem/* 16px */;
+        line-height: 1.5rem/* 24px */;
+    }
+    .cs-yellow{
+        color: #facc15;
+    }
+    .cs-button{
+        border-top: 1px solid #a1a1aa;
+        border-left: 1px solid #a1a1aa;
+        border-bottom: 1px solid #27272a;
+        border-right: 1px solid #27272a;
+    }
+}
