--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -63,7 +63,8 @@
         border: 0;
         border-bottom: 1px solid var(--cs-light-border);
         border-top: 1px solid var(--cs-dark-border);
-        
+        margin-top: 1.5rem/* 24px */;
+    margin-bottom: 1.5rem/* 24px */;
     }
     .logo-horizontal {
         position: absolute;
@@ -121,12 +122,22 @@
     .menu-active{
         color: var(--cs-yellow);
     }
+    .about-view-drop{
+        height: 24rem;
+    }
     span.icon {display:none}
     span.text {display:inline-block}
     @media screen and (max-width: 640px) {
+        hr{
+            margin-top: 1rem/* 24px */;
+        margin-bottom: 1rem/* 24px */;
+        }
         .about-view{
             height: 80%;
-            width: 80%;
+            width: 90%;
+        }
+        .about-view-drop{
+            height: 17rem;
         }
         span.icon {display:inline-block}
         span.text {display:none}
@@ -178,5 +189,52 @@
             height: 100vh; /* Fallback for browsers that do not support Custom Properties */
         }
     }
-    
+    /* Scrollbar edit*/
+    ::-webkit-scrollbar {
+        width: 1rem;
+        
+    }
+    ::-webkit-scrollbar-track {
+        background: var(--cs-light-border);
+        border-right: 1px solid var(--cs-dark-border);
+    }
+    ::-webkit-scrollbar-thumb {
+        background-color: var(--cs-green);
+        border-top: 1px solid var(--cs-light-border);
+        border-left: 1px solid var(--cs-light-border);
+        border-bottom: 1px solid var(--cs-dark-border);
+        border-right: 1px solid var(--cs-dark-border);
+    }
+    ::-webkit-scrollbar-button{
+        border-top: 1px solid var(--cs-light-border);
+        border-left: 1px solid var(--cs-light-border);
+        border-bottom: 1px solid var(--cs-dark-border);
+        border-right: 1px solid var(--cs-dark-border);
+    }
+    ::-webkit-scrollbar-button:vertical:decrement{
+        border-top: 1px solid var(--cs-light-border);
+        border-left: 1px solid var(--cs-light-border);
+        border-bottom: 1px solid var(--cs-dark-border);
+        border-right: 1px solid var(--cs-dark-border);
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1rem' height='1rem' viewBox='0 0 28 28' fill='none' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-up'%3E%3Cpolyline points='18 15 12 9 6 15'%3E%3C/polyline%3E%3C/svg%3E");
+    }
+    ::-webkit-scrollbar-button:vertical:increment{
+        border-top: 1px solid var(--cs-light-border);
+        border-left: 1px solid var(--cs-light-border);
+        border-bottom: 1px solid var(--cs-dark-border);
+        border-right: 1px solid var(--cs-dark-border);
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1rem' height='1rem' viewBox='0 0 28 28' fill='none' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-down'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+    }
+    ::-webkit-scrollbar-button:vertical:decrement:active{
+        border-top: 1px solid var(--cs-dark-border);
+        border-left: 1px solid var(--cs-dark-border);
+        border-bottom: 1px solid var(--cs-light-border);
+        border-right: 1px solid var(--cs-light-border);
+    }
+    ::-webkit-scrollbar-button:vertical:increment:active{
+        border-top: 1px solid var(--cs-dark-border);
+        border-left: 1px solid var(--cs-dark-border);
+        border-bottom: 1px solid var(--cs-light-border);
+        border-right: 1px solid var(--cs-light-border);
+    }
 }
